# tracker1

./: .gitignore  CMakeLists.txt  Five_Threads.rar  RKNN.toml  commit_README.md  config.toml  display.toml  logging.toml  motion_detector.toml  overlay.toml  rebind_smoothing.toml  rtsp.toml  static_detector.toml  trackers.toml  Добавление устойчивости к препятствиям.docx  Документация приложения.docx  Общая архитектура и потоки.docx  Описание.docx  Описание2.docx  Согласно новому ТЗ.docx  ТЗ  Детекция по клику_2.docx  Текущее состояние приложения.docx  алгоритм привязки статич ббокса.docx  добавлен watchdog сброса ложных треков.docx  недавние изменения.docx  новое ТЗ  Детекция по клику.docx  описание-предыдущего коммита.rar  переход на yolov8.docx  текущие изменения.docx  текущие изменения.txt  цепочки детекции.docx
include/: auto_candidate_search.h  auto_detection_provider.h  automatic_motion_detector.h  blocking_queue.h  clicked_target_shaper.h  clicked_tracks_handler.h  config.h  detection_matcher.h  detector.h  display_loop.h  frame_store.h  manual_motion_detector.h  manual_tracker_manager.h  merge_bbox.h  motion_detector.h  offset_calculator.h  other_handlers.h  overlay.h  rate_limiter.h  rtsp_watch_dog.h  rtsp_worker.h  static_box_manager.h  static_target_manager.h  target.h  tracker_manager.h  tracks_manager.h  yolo_postprocess.h
include/blob/: blob_merger.h
include/core/: frame_store.h
include/detect/: bbox_filter.h
include/rtsp/: rtsp_worker.h
include/tracker/: target.h  tracker_manager.h
include/ui/: ui_thread.h
include/util/: offset_calculator.h  rect_utils.h
opi5_tracker_refactored/: CMakeLists.txt
opi5_tracker_refactored/include/detect/: motion_detector.h
opi5_tracker_refactored/include/overlay/: overlay_renderer.h
opi5_tracker_refactored/include/rtsp/: rtsp_worker.h
opi5_tracker_refactored/src/: main.cpp
opi5_tracker_refactored/src/overlay/: overlay_renderer.cpp
opi5_tracker_refactored/src/rtsp/: rtsp_worker.cpp
src/: auto_candidate_search.cpp  auto_detection_provider.cpp  automatic_motion_detector.cpp  clicked_target_shaper.cpp  clicked_tracks_handler.cpp  config.cpp  detection_matcher.cpp  detector.cpp  display_loop.cpp  frame_store.cpp  main.cpp  manual_motion_detector.cpp  manual_tracker_manager.cpp  merge_bbox.cpp  motion_detector.cpp  offset_calculator.cpp  overlay.cpp  rtsp_watch_dog.cpp  rtsp_worker.cpp  static_box_manager.cpp  static_target_manager.cpp  tracker_manager.cpp  tracks_manager.cpp  yolo_postprocess.cpp
src/blob/: blob_merger.cpp
src/core/: frame_store.cpp
src/detect/: bbox_filter.cpp  motion_detector.cpp
src/overlay/: overlay_renderer.cpp
src/tracker/: tracker_manager.cpp
src/ui/: ui_thread.cpp
src/util/: offset_calculator.cpp  rect_utils.cpp
